# matrix_bot_functions

./: Cargo.toml  README.md
openweathermap_api/: Cargo.toml
openweathermap_api/src/: lib.rs
src/: lib.rs  main.rs
src/handler_funcs/: dice.rs  leave.rs  mod.rs  stash.rs  weather.rs
src/languages/: de.rs  en.rs  mod.rs
