[package]
name = "matrix_bot_functions"
version = "0.1.0"
authors = ["zwieberl <donko@posteo.de>"]


[dependencies]
matrix_bot_api = { path = "../matrix_bot_api", version = "*"}
config = "*" # For src/bin only. cargo doesn't cleanly support dependencies for only parts
# dice handler
rand = "*"
# Weather handler
openweathermap_api = {path = "./openweathermap_api"}
serde_json = "*"
reqwest = "*"
chrono = "*"
